--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+.navbar-dark {
+    background-color: cadetblue;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-link {
+    text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.post-item .comment-item {
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.submit-form {
+    padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.post-container {
+    padding: 20px
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.span-option {
+    cursor: pointer;
+    color: grey;
+}
+
+.span-divider {
+    color: grey;
+}
+
+.span-option:hover {
+    text-decoration: underline;
+}
+
+.post-title {
+    cursor: pointer;
 }
